--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 main {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    height: min-content;
+    height: max-content;
     column-gap: 60px;
     overflow: hidden;
 }
@@ -103,4 +103,89 @@ main {
     margin-right: 20px;
     position: absolute;
     z-index: 2;
+}
+
+.right-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: left;
+}
+
+.enter-task-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.enter-task-section {
+    margin-bottom: 60px;
+}
+
+.active-tasks {
+    overflow: scroll;
+    width: 100%;
+}
+
+input {
+    font-size: 70px;
+    background-color: var(--light-pink);
+    color: white;
+    border: none;
+    font-family: "Pixelify Sans", sans-serif;
+    width: 70%;
+    margin: 0px 30px;
+    border-radius: 15px;
+    text-align: center;
+    border: none;
+}
+
+input::placeholder {
+    color: white;
+}
+
+input:focus {
+    outline: none;
+    caret-color: transparent;
+}
+
+.add-button, .completed-button, .delete-button {
+    background-color: var(--light-green);
+    border: none;
+    width: 90px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.add-button:hover, .completed-button:hover, .delete-button:hover {
+    opacity: 0.7;
+    scale: 1.1;
+    transition: opacity, scale 0.2s;
+}
+
+.task {
+    display: flex;
+    flex-direction: row;
+    padding: 10px 0px;
+    margin-bottom: 20px;
+}
+
+.task-desc {
+    width: 100%;
+    background-color: var(--light-blue);
+    text-align: center;
+    font-size: 60px;
+    margin-right: 20px;
+    border-radius: 15px;
+    color: white;
+}
+
+.completed-button {
+    margin-right: 20px;
+}
+
+.delete-button {
+    background-color: var(--dark-pink);
 }
