--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,20 @@
 
 body {
     background-color: var(--light-blue);
-    padding: 40px;
     font-family: "Pixelify Sans", sans-serif;
+    overflow: hidden;
+   
 }
 
 main {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    height: max-content;
     column-gap: 60px;
-    overflow: hidden;
+    position: fixed;
+    top: 40px;
+    bottom: 40px;
+    left: 40px;
+    right: 40px;
 }
 
 .left-section, .right-section {
@@ -27,12 +31,12 @@ main {
     align-items: center;
     justify-content: center;
     padding: 40px;
-    overflow: scroll;
 }
 
 .left-section {
     overflow: hidden;
     flex-shrink: 1;
+    padding-top: 70px;
 }
 
 .cinnamoroll {
@@ -127,6 +131,7 @@ main {
 .active-tasks {
     overflow: scroll;
     width: 100%;
+    height: 700px;
 }
 
 input {
